Fix margins on mobile and add a few sections

--- a/style.css
+++ b/style.css
@@ -28,8 +28,8 @@ body {
     color: rgb(156, 156, 156);
 }
 
-/* iframe {
-    display:block;
-    /* width :100%; */
-    /* height: 0; */
-} */
+@media (max-width: 480px) {
+    body {
+        margin: 10px;
+    }
+}
